--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "roave/security-advisories": "dev-master",
         "phpunit/phpunit": "^9.5",
         "hjerichen/prophecy-php": "^1.0",
-        "phpspec/prophecy-phpunit": "^2.0"
+        "phpspec/prophecy-phpunit": "^2.0",
+        "vimeo/psalm": "^5.12",
+        "psalm/plugin-phpunit": "^0.18.4"
     },
     "autoload": {
         "psr-4": {
